--- a/mynotes.html
+++ b/mynotes.html
@@ -456,6 +456,17 @@ fi
 git commit -am '- new readme'
 git push</pre>
         <li>setup</li>
+        config file:
+        <pre>
+[user]
+    email = d.boenke@gmx.net
+    name = gixxerPS
+[core]
+    editor = vim
+[color]
+    ui = true
+        </pre>
+        
         <kbd>git config --global user.name "Daniel Boenke"</kbd><br>
         <kbd>git config --global user.email boenkedaniel@gmail.com</kbd><br>
         <kbd>git config --global core.editor vim</kbd><br>
